Bug 1777181 - Use cancelable runnables for DataPipe notifications, r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D150611