ipc/glue/DataPipe.cpp
@@ -570,7 +570,7 @@ NS_IMETHODIMP DataPipeSender::AsyncWait(nsIOutputStreamCallback* aCallback,
                                         uint32_t aRequestedCount,
                                         nsIEventTarget* aTarget) {
   AsyncWaitInternal(
-      aCallback ? NS_NewRunnableFunction(
+      aCallback ? NS_NewCancelableRunnableFunction(
                       "DataPipeReceiver::AsyncWait",
                       [self = RefPtr{this}, callback = RefPtr{aCallback}] {
                         MOZ_LOG(gDataPipeLog, LogLevel::Debug,
@@ -641,7 +641,7 @@ NS_IMETHODIMP DataPipeReceiver::AsyncWait(nsIInputStreamCallback* aCallback,
                                           uint32_t aRequestedCount,
                                           nsIEventTarget* aTarget) {
   AsyncWaitInternal(
-      aCallback ? NS_NewRunnableFunction(
+      aCallback ? NS_NewCancelableRunnableFunction(
                       "DataPipeReceiver::AsyncWait",
                       [self = RefPtr{this}, callback = RefPtr{aCallback}] {
                         MOZ_LOG(gDataPipeLog, LogLevel::Debug,
